<resources>
    <string name="app_name">KinoPoisk</string>
    <string name="title_movie">Movie/Serials</string>
    <string name="title_actros">Actors</string>
    <string name="title_favourite">Favourites</string>
    <string name="movie_searchView_hint">Search movie/series by key words...</string>
    <string name="search_null">Nothing found...</string>
    <string name="search_bar_is_empty">Search bar is empty...</string>
    <string name="page_up">Page up</string>
    <string name="page_down">Page down</string>
    <string name="actors_searchView_hint">Search actrors by name...</string>
    <string name="add_element">Add to favourite</string>
    <string name="delete_element">Delete from favourite</string>
    <string name="title_movie_or_series">Movie or series</string>
    <string name="age_rating">Age rating</string>
    <string name="release_date">Release date</string>
    <string name="fees">Fees</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="search_bar_hint_favourites">Search by keywords in the name</string>
</resources>